--- a/.github/workflows/terraformCICD.yml
+++ b/.github/workflows/terraformCICD.yml
@@ -7,6 +7,8 @@ on:
     paths:
       - 'Terraform/**'   # Only trigger when files in Terraform/ are changed
   workflow_dispatch:     # Allows manual trigger from GitHub UI
+env:
+  environment: dev
 
 jobs:
   terraform:
