--- a/.github/workflows/terraformCICD.yml
+++ b/.github/workflows/terraformCICD.yml
@@ -28,7 +28,7 @@ jobs:
           terraform_version: 1.4.6
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4.1.0
+        uses: aws-actions/configure-aws-credentials@b8c74d
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
